--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,18 +3,24 @@
 @use "sass:map";
 
 $breakpoints: (
-  smallest: 375px,
+  smallest: 376px,
+  smaller: 415px,
   small: 576px,
   tablet: 768px,
+  tablet-lg: 1024px,
   desktop-sm: 992px,
   desktop-md: 1200px,
-  desktop-lg: 1400px
+  desktop-lg: 1400px,
 );
 
 // mixins
 
 @mixin mq($key, $from: max) {
-  $size: map-get($map: $breakpoints, $key: $key);
+  $size:
+    map-get(
+      $map: $breakpoints,
+      $key: $key,
+    );
 
   @media (#{$from}-width: $size) {
     @content;
@@ -23,8 +29,7 @@ $breakpoints: (
 
 @mixin font-face($name, $url, $weight, $style: normal) {
   @font-face {
-    src:
-      url("#{$url}.woff2") format("woff2"),
+    src: url("#{$url}.woff2") format("woff2"),
       url("#{$url}.woff") format("woff");
     font-family: $name;
     font-weight: $weight;
@@ -37,6 +42,7 @@ $breakpoints: (
 @include font-face("Montserrat", "../fonts/Montserrat-Medium", 500);
 
 :root {
+  // color
   --color-white: #fff;
   --color-black: #000;
   --color-page-bg: #efe6e4;
@@ -45,21 +51,21 @@ $breakpoints: (
   --color-text-primary: #533738;
   --color-text-secondary: var(--color-white);
   --color-text-light: #f6ede9;
+  --color-light-pink: #cc8b86;
 
   // font
   --font-primary: "Montserrat", "Arial", sans-serif;
   --font-size-primary: 18px;
+  --font-size-secondary: 16px;
   --font-size-title: 40px;
   --line-height-primary: 1.67;
   --line-height-title: 1.25;
 
-  // breakpoints
-  --xs: 375px;
-  --sm: 576px;
-  --tablet: 768px;
-  --desktop-sm: 992px;
-  --desktop-md: 1200px;
-  --desktop-lg: 1400px;
+  // values
+  --section-y-padding: 65px;
+
+  // effects
+  --transition: 300ms ease-in-out;
 }
 
 /* GLOBALS */
@@ -89,11 +95,16 @@ $breakpoints: (
   font-family: var(--font-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: var(--font-size-primary);
   line-height: var(--line-height-primary);
   color: var(--color-text-primary);
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: var(--color-white);
+  background-color: var(--color-page-bg);
+
+  &.locked {
+    overflow: hidden;
+  }
 }
 
 a {
@@ -134,4 +145,53 @@ input {
   margin: 0 auto;
   padding: 0 15px;
   max-width: 1230px;
+}
+
+.link {
+  font-size: var(--font-size-secondary);
+  line-height: 19px;
+  transition: var(--transition);
+  transition-property: color;
+
+  @include mq(tablet, min) {
+    &:hover {
+      color: var(--color-light-pink);
+    }
+  }
+}
+
+.title {
+  font-weight: 400;
+  font-size: var(--font-size-title);
+  line-height: var(--line-height-title);
+  text-transform: uppercase;
+
+  @include mq(small) {
+    font-size: 30px;
+  }
+}
+
+@import "buttons";
+@import "components/page-header";
+@import "components/hero";
+@import "components/about";
+@import "components/features";
+@import "components/portfolio";
+@import "components/team";
+@import "components/reviews";
+@import "components/contact";
+@import "components/page-footer";
+
+.anim {
+  animation: an 700ms ease-in-out forwards;
+}
+
+@keyframes an {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
