--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,197 +1,17 @@
-@import "libs/normalize";
-
-@use "sass:map";
-
-$breakpoints: (
-  smallest: 376px,
-  smaller: 415px,
-  small: 576px,
-  tablet: 768px,
-  tablet-lg: 1024px,
-  desktop-sm: 992px,
-  desktop-md: 1200px,
-  desktop-lg: 1400px,
-);
-
-// mixins
-
-@mixin mq($key, $from: max) {
-  $size:
-    map-get(
-      $map: $breakpoints,
-      $key: $key,
-    );
-
-  @media (#{$from}-width: $size) {
-    @content;
-  }
-}
-
-@mixin font-face($name, $url, $weight, $style: normal) {
-  @font-face {
-    src: url("#{$url}.woff2") format("woff2"),
-      url("#{$url}.woff") format("woff");
-    font-family: $name;
-    font-weight: $weight;
-    font-style: $style;
-    font-display: swap;
-  }
-}
-
-@include font-face("Montserrat", "../fonts/Montserrat-Regular", 400);
-@include font-face("Montserrat", "../fonts/Montserrat-Medium", 500);
-
-:root {
-  // color
-  --color-white: #fff;
-  --color-black: #000;
-  --color-page-bg: #efe6e4;
-  --color-section-bg: #e2c4ba;
-  --color-section-bg-dark: #8d7370;
-  --color-text-primary: #533738;
-  --color-text-secondary: var(--color-white);
-  --color-text-light: #f6ede9;
-  --color-light-pink: #cc8b86;
-
-  // font
-  --font-primary: "Montserrat", "Arial", sans-serif;
-  --font-size-primary: 18px;
-  --font-size-secondary: 16px;
-  --font-size-title: 40px;
-  --line-height-primary: 1.67;
-  --line-height-title: 1.25;
-
-  // values
-  --section-y-padding: 65px;
-
-  // effects
-  --transition: 300ms ease-in-out;
-}
-
-/* GLOBALS */
-
-.page-html {
-  height: 100%;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-*:focus:not(:focus-visible) {
-  outline: none;
-}
-
-.page-body {
-  overflow: auto;
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  min-width: 320px;
-  font-family: var(--font-primary);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: var(--font-size-primary);
-  line-height: var(--line-height-primary);
-  color: var(--color-text-primary);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: var(--color-page-bg);
-
-  &.locked {
-    overflow: hidden;
-  }
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-}
-
-button {
-  border: none;
-  font-family: inherit;
-  cursor: pointer;
-}
-
-input {
-  font: inherit;
-}
-
-.visually-hidden {
-  position: absolute;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  width: 1px;
-  height: 1px;
-  clip: rect(1px, 1px, 1px, 1px);
-}
-
-.list-reset {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1230px;
-}
-
-.link {
-  font-size: var(--font-size-secondary);
-  line-height: 19px;
-  transition: var(--transition);
-  transition-property: color;
-
-  @include mq(tablet, min) {
-    &:hover {
-      color: var(--color-light-pink);
-    }
-  }
-}
-
-.title {
-  font-weight: 400;
-  font-size: var(--font-size-title);
-  line-height: var(--line-height-title);
-  text-transform: uppercase;
-
-  @include mq(small) {
-    font-size: 30px;
-  }
-}
-
+@import "vendor/normalize";
+@import "mixins";
+@import "fonts";
+@import "vars";
+@import "base";
 @import "buttons";
-@import "components/page-header";
-@import "components/hero";
-@import "components/about";
-@import "components/features";
-@import "components/portfolio";
-@import "components/team";
-@import "components/reviews";
-@import "components/contact";
-@import "components/page-footer";
-
-.anim {
-  animation: an 700ms ease-in-out forwards;
-}
-
-@keyframes an {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
+@import "page-header";
+@import "hero";
+@import "about";
+@import "features";
+@import "portfolio";
+@import "team";
+@import "process";
+@import "reviews";
+@import "contact";
+@import "page-footer";
+@import "animations";
