--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -29,24 +29,26 @@
   }
 
   &__image-wrapper {
+    flex-shrink: 0;
+    overflow: hidden;
     margin-right: 60px;
-    min-width: 445px;
-    min-height: 475px;
+    width: 445px;
+    height: 465px;
 
     @include mq(tablet-lg) {
       grid-column: 1 / 5;
       grid-row: 1 / 3;
       margin-right: 0;
-      width: 90%;
+      width: 100%;
     }
 
     @include mq(small) {
+      width: 100%;
       height: 400px;
-      min-width: 100%;
     }
 
     @include mq(smaller) {
-      min-height: 300px;
+      height: 300px;
     }
   }
 
@@ -54,6 +56,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    &.anim {
+      animation: scaleShow 700ms ease-in-out forwards;
+    }
   }
 
   &__text {
