--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -23,6 +23,10 @@
   @include mq(tablet-lg) {
     padding: 20px 50px;
   }
+
+  @media (max-width: 360px) {
+    padding: 20px 30px;
+  }
 }
 
 .btn-burger {
