--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -6,10 +6,11 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
+    min-height: inherit;
   }
 
   &__content {
-    margin-right: 20px;
+    margin-right: 2%;
     padding: 50px 0 50px 82px;
     width: 49%;
 
@@ -21,6 +22,25 @@
 
     @include mq(smaller) {
       padding: 40px 10px;
+    }
+  }
+
+  &__map {
+    width: 49%;
+    background-image: url("../images/map-preview.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+
+    @include mq(desktop-sm) {
+      width: 100%;
+      height: 400px;
     }
   }
 
@@ -42,10 +62,6 @@
     @include mq(smaller) {
       font-size: 16px;
     }
-  }
-
-  &__map {
-    max-width: 51%;
   }
 }
 
@@ -72,9 +88,9 @@
 
   &__btn {
     padding: 24px 73px 25px 70px;
- 
+
     @include mq(small) {
-      padding: 24px 30px 25px 30px;
+      padding: 24px 30px 25px;
       min-width: 100%;
     }
   }
