--- a/src/scss/_page-header.scss
+++ b/src/scss/_page-header.scss
@@ -24,8 +24,8 @@
     }
 
     @include mq(tablet-lg) {
+      width: 120px;
       height: 32px;
-      min-width: 120px;
     }
   }
 
@@ -38,8 +38,16 @@
     @include mq(tablet-lg) {
       align-self: center;
       margin-left: 0;
+      border: 2px solid var(--color-white);
+      padding: 10px;
+      width: 80%;
       font-size: 22px;
+      text-align: center;
       color: var(--color-white);
+
+      &:hover {
+        color: inherit;
+      }
     }
 
     @include mq(smallest) {
@@ -60,19 +68,12 @@
     @include mq(tablet-lg) {
       flex-direction: column;
       margin-right: 0;
-      margin-bottom: 30px;
-      padding-right: 30px;
-      padding-left: 30px;
+      padding: 0 30px 30px;
     }
   }
 
   &__item {
     line-height: 1.3;
-
-    @include mq(tablet-lg) {
-      padding: 10px;
-      color: var(--color-white);
-    }
   }
 
   &__item:not(:last-child) {
@@ -80,8 +81,6 @@
 
     @include mq(tablet-lg) {
       margin-right: 0;
-      border-bottom: 1px solid var(--color-white);
-      padding-right: 50px;
     }
   }
 
@@ -89,6 +88,9 @@
     color: inherit;
 
     @include mq(tablet-lg) {
+      display: block;
+      border-bottom: 1px solid var(--color-white);
+      padding: 10px;
       font-size: 22px;
       line-height: 1.2;
     }
@@ -113,8 +115,10 @@
     z-index: 50;
     flex-direction: column;
     align-items: flex-end;
+    overflow: auto;
     padding-top: 150px;
-    height: 100vh;
+    height: 100%;
+    color: var(--color-white);
     background-color: var(--color-light-pink);
     transform: translate3d(100%, 0, 0);
     transition: transform var(--transition);
@@ -126,16 +130,5 @@
         animation: fadeIn 500ms ease-in-out forwards;
       }
     }
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    transform: translate(30%, 20%);
-  }
-
-  to {
-    opacity: 1;
-    transform: translateX(0, 0);
   }
 }
