--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -22,7 +22,7 @@
       margin-left: 14px;
       width: 60px;
       height: 20px;
-      background-image: url("../../images/icons/arrow.svg");
+      background-image: url("../images/icons/arrow.svg");
       background-position: 0 center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -52,15 +52,16 @@
 .portfolio-cases {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
 
   &__case {
     flex-grow: 1;
+    margin-right: 2%;
     margin-bottom: 30px;
     width: 57.5%;
 
-    &:not(:nth-child(2n)) {
-      margin-right: 2%;
+    &:nth-child(2n) {
+      margin-right: 0;
     }
 
     &:nth-child(4n - 3),
@@ -87,23 +88,9 @@
     }
 
     @include mq(tablet) {
+      margin-right: 0;
       width: 100%;
-
-      &:not(:nth-child(2n)) {
-        margin-right: 0;
-      }
     }
-  }
-}
-
-@keyframes scale {
-  from {
-    transform: rotateY(30deg);
-  }
-
-  to {
-    opacity: 1;
-    transform: rotateY(0deg);
   }
 }
 
@@ -122,6 +109,7 @@
     position: absolute;
     left: 0;
     top: 0;
+    overflow: auto;
     padding: 85px 35px;
     width: 100%;
     height: 100%;
@@ -131,6 +119,10 @@
     visibility: hidden;
     transition: var(--transition);
     transition-property: opacity;
+
+    @include mq(smaller) {
+      padding-top: 50px;
+    }
   }
 
   &__title {
