--- a/src/scss/_page-header.scss
+++ b/src/scss/_page-header.scss
@@ -53,6 +53,10 @@
     @include mq(smallest) {
       font-size: 20px;
     }
+
+    @media (max-height: 415px) {
+      font-size: 18px;
+    }
   }
 }
 
@@ -61,6 +65,8 @@
   flex-grow: 1;
 
   &__list {
+    @include list-reset;
+
     display: flex;
     flex-wrap: wrap;
     margin-right: 10px;
@@ -98,6 +104,10 @@
     @include mq(smallest) {
       font-size: 20px;
     }
+
+    @media (max-height: 415px) {
+      font-size: 18px;
+    }
   }
 
   &__burger {
@@ -117,6 +127,7 @@
     align-items: flex-end;
     overflow: auto;
     padding-top: 150px;
+    padding-bottom: 30px;
     height: 100%;
     color: var(--color-white);
     background-color: var(--color-light-pink);
@@ -130,5 +141,10 @@
         animation: fadeIn 500ms ease-in-out forwards;
       }
     }
+  }
+
+  @media (max-height: 415px) {
+    padding-top: 60px;
+    padding-right: 40px;
   }
 }
