--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -50,12 +50,13 @@
 }
 
 .portfolio-cases {
+  @include list-reset;
+
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 12px;
 
   &__case {
-    flex-grow: 1;
     margin-right: 2%;
     margin-bottom: 30px;
     width: 57.5%;
@@ -67,6 +68,14 @@
     &:nth-child(4n - 3),
     &:nth-child(4n) {
       width: 40.5%;
+
+      @include mq(desktop-sm) {
+        width: 49%;
+      }
+
+      @include mq(tablet) {
+        width: 100%;
+      }
     }
 
     &.anim {
@@ -80,11 +89,6 @@
     @include mq(desktop-sm) {
       margin-bottom: 20px;
       width: 49%;
-
-      &:nth-child(4),
-      &:nth-child(4n - 3) {
-        width: 49%;
-      }
     }
 
     @include mq(tablet) {
